# farmdure-core

./: .gitignore  LICENSE  README.md  __init__.py  default_parameters.yaml  pyproject.toml  requirements.txt
crops/: __init__.py  adzuki.py  barley.py  base.py  bean.py  chili.py  corn.py  default_parameters.yaml  garlic.py  onion.py  potato.py  radish.py  sesame.py  sweet_potato.py  wheat.py
crops/cabbage/: autumn_cabbage.py  cabbage.py  spring_cabbage.py
crops/rice/: early_mature_rice.py  middle_late_mature_rice.py  middle_mature_rice.py  rice.py
docs/: gdd.md
farmdurecore/: _version.py  parameters.yaml  requirements.txt  sample.csv
farmdurecore/crops/: base.py  horseradish.py  onion.py  sesame.py
farmdurecore/crops/cabbage/: __init__.py  spring_cabbage.py
farmdurecore/crops/rice/: __init__.py  middle_mature_rice.py  rice.py
farmdurecore/utils/: helper.py  logger.py  profiler.py  weather.py
notebooks/: 사용예시.ipynb  이벤트 GDD 역산.ipynb  작물 environment 계산.ipynb  작물 progress 계산.ipynb  작물 warnings 계산.ipynb  작물 모델 프로파일러.ipynb
utils/: date.py  helper.py  weather.py
